WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310679
Find in page match is updated incorrectly
https://bugs.webkit.org/show_bug.cgi?id=310679
Summary
Find in page match is updated incorrectly
ccarley2
Reported
2026-03-24 17:07:23 PDT
The match index is incorrectly updated when navigating backwards
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-24 17:07:30 PDT
<
rdar://problem/173280425
>
ccarley2
Comment 2
2026-03-24 17:10:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61289
EWS
Comment 3
2026-03-26 15:05:04 PDT
Committed
310022@main
(fcded16b06bb): <
https://commits.webkit.org/310022@main
> Reviewed commits have been landed. Closing PR #61289 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug