Find in page match is updated incorrectly https://bugs.webkit.org/show_bug.cgi?id=310679 rdar://173280425

Reviewed by Megan Gardner.

The match index was being updated incorrectly after changing the type
from an int to an optional unsigned. I fix the logic and consolidated
it to one function.

* Source/WebKit/WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::updateMatchIndex):
(WebKit::FindController::findString):

Added some tests to exercise this change.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewFindString.mm:
(TestWebKitAPI::TEST(WKWebViewFindString, MatchIndexDoesNotUpdateWithoutDetermineMatchIndexOption)):
(TestWebKitAPI::TEST(WKWebViewFindString, MatchIndexIsCorrectNavigatingWrapAround)):
(TestWebKitAPI::TEST(WKWebViewFindString, MatchIndexIsCorrectNavigatingWrapAroundBackwards)):

Canonical link: https://commits.webkit.org/310022@main